<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BlankFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="410dp"
            android:layout_height="450dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="101dp">
z
                <Button
                    android:id="@+id/buttonAC"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/roundedbuttonac"
                    android:text="@string/ac"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonC"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/c"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonMod"
                    android:background="@drawable/roundedbuttonoperators"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/module"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/roundedbuttonoperators"
                    android:text="@string/divide"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:text="@string/seven"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/roundedbutton"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button8"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/eight"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button9"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/nine"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:background="@drawable/roundedbuttonoperators"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/multiply"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button4"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/four"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button5"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/five"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button6"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/six"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:background="@drawable/roundedbuttonoperators"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/minus"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/one"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button2"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/two"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="9dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/three"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:background="@drawable/roundedbuttonoperators"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/plus"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/buttonPoint"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/point"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button0"
                    android:background="@drawable/roundedbutton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/zero"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonEquals"
                    android:background="@drawable/roundedbuttonequals"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:text="@string/equals"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />


            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textViewSmall"
            android:layout_width="394dp"
            android:layout_height="56dp"
            android:gravity="bottom|right"
            android:textSize="22sp"
            android:textColor="#dfdfdf"
            app:layout_constraintBottom_toTopOf="@+id/bigTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bigTextView"
            android:layout_width="396dp"
            android:layout_height="78dp"
            android:gravity="bottom|right"
            android:textColor="#dfdfdf"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/historyButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/roundedbuttonac"
            android:text="@string/history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>